Insert casts to off_t to avoid 32-bit multiplication overflow when computing device offsets on 32-bit platforms. Should fix PR 45191.